fixed styling on small devices

--- a/src/screens/AuthScreen/index.module.scss
+++ b/src/screens/AuthScreen/index.module.scss
@@ -31,3 +31,12 @@
     }
 
 }
+
+@media (max-width: 450px) {
+    .auth-screen {
+        .card {
+            max-width: 90vw;
+            height: 60vh;
+        }
+    }
+}
